--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "onesignal-expo-plugin",
+  "name": "notification-service-expo-plugin",
   "version": "2.0.2",
   "description": "The OneSignal Expo plugin allows you to use OneSignal without leaving the managed workflow. Developed in collaboration with SweetGreen.",
   "main": "./app.plugin.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "yarn run lint && rm -rf build && tsc && cp -a support/serviceExtensionFiles build/support/",
+    "build": "npm run lint && rm -rf build && tsc && cp -a support/serviceExtensionFiles build/support/",
     "lint": "eslint . --ext .ts",
-    "prepare": "yarn run build"
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
