--- a/package.json
+++ b/package.json
@@ -34,14 +34,13 @@
   },
   "homepage": "https://github.com/OneSignal/onesignal-expo-plugin#readme",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
-    "eslint": "^8.8.0",
-    "expo-module-scripts": "^2.0.0",
-    "readme-md-generator": "^1.0.0",
-    "typescript": "^4.5.5"
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
+    "eslint": "8.57.0",
+    "expo-module-scripts": "3.5.2",
+    "typescript": "~5.3.3"
   },
   "dependencies": {
-    "@expo/image-utils": "^0.3.22"
+    "@expo/image-utils": "^0.5.1"
   }
 }
