--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
     "eslint": "8.57.0",
-    "expo-module-scripts": "3.5.2",
+    "expo-module-scripts": "^4.0.5",
     "typescript": "~5.3.3"
   },
   "dependencies": {
